These are the Release Notes for post Revision 2.5.0 top-of-trunk netperf:

*) It is now possible to set/get the TCP congestion control algorithm
   being used by either end of the test connection when using the omni
   code.  The output selectors are LOCAL_CONG_CONTROL and
   REMOTE_CONG_CONTROL and setting is via the test-specific -K option.

*) Stop leaking file descriptors when looking-up probable egress
   interface names and I/O slot numbers.

*) The global -Y option can be used to set IP_TOS on those platforms
   which support it.  Since this is specific to IP (v4 or v6) it may
   move to a test-specific otion in the future.  It is presently
   global for foolish consistency with the -y option to set
   SO_PRIORITY.

*) The global -y option can be used to set SO_PRIORITY on those
   platforms which support it.  Based on patches from Amir Vidai.

*) The control message size has been increased from 256 bytes to 512
   bytes. THIS WILL BREAK COMPATABILITY WITH PREVIOUS VERSIONS OF
   NETPERF. However, we need more room on the pinhead on which the
   angels dance.

*) Make the "sum" field of the histogram structure a 64 bit int to
   avoid having it wrap-around on tests where the sum of all the
   measured latencies was larger than 31 bits. This was causing
   statistics like stddev to go negative in some cases.

*) If the time delta between two events is negative, do not bother
   doing any math with it in the histogram/statistics code, just
   increment the ridiculous count and move-on.

*) Fixed a bug which caused local transport retransmissions to be
   reported as -1 even though the getsockopt() call was
   successful. (Linux).  Later included remote transport
   retransmissions.

*) The src/nettest_omni.c and re-written src/netserver.c code are now
   known to have compiled under Windows 7 x64 with the Microsoft
   WDK. There remains a timing issue with confidence intervals which
   is yet to be addressed, and may have been there for ages. Netserver